# amber

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: amber.h
samples/01_armatures/: CMakeLists.txt  main.cpp
samples/02_poses/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  amber.c  amber_internal.h
src/common/: intrinsics.h  pool.c  pool.h
src/impl/: impl_instance.c  impl_internal.h
